--- a/src/assets/scss/landing/home.module.scss
+++ b/src/assets/scss/landing/home.module.scss
@@ -265,7 +265,6 @@
   &:not(.navbar--simple).expanded {
     transform: translateY(0);
   }
-
   & .header__auth {
     display: none;
     margin-bottom: 32px;
@@ -285,7 +284,6 @@
       height: 36px;
       line-height: 34px;
     }
-
     &:not(.active) > a {
       color: rgba(255, 255, 255, 0.6);
     }
@@ -820,6 +818,120 @@ img.avatar {
   transition: opacity 0.15s linear;
 }
 
+
+.header__page {
+  position: relative;
+  padding-top: 40px;
+  margin-bottom: 150px;
+  background-repeat: no-repeat;
+  background-size:
+    209px 203px,
+    216px 210px,
+    129px 126px,
+    111px 107px,
+    1173px 520px,
+    100% 862px;
+  background-position:
+    calc(100% - 100px) 525px,
+    50px 326px,
+    293.5px 527px,
+    calc(100% - 203px) 317px,
+    0 263px,
+    0 0;
+  &__top {
+    max-width: 1280px;
+    display: flex;
+    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 12px;
+    padding-left: 12px;
+  }
+  &__logo img {
+    width: 150px;
+  }
+  &__auth {
+    .navbar .navbar__item a {
+      color: #335ffc;
+    }
+    &__register > a {
+      font-size: 1rem;
+    }
+  }
+  &__hamburger {
+    display: none;
+    & > button {
+      border: none;
+      padding: 0;
+      background-color: transparent;
+      outline: none;
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      line-height: 48px;
+      span > svg {
+        width: 48px;
+        height: 48px;
+        padding: 8px;
+        color: #040f4a;
+        border-radius: 50%;
+        border: 1px solid #040f4a;
+        background-color: red;
+        font-weight: 100;
+      }
+    }
+  }
+  &__intro {
+    text-align: center;
+    margin-top: 160px;
+    & > h1 {
+      font-size: 2.5em;
+      font-weight: 700;
+      color: #fff;
+      margin-bottom: 30px;
+    }
+    & > p {
+      font-size: 1.1em;
+      font-weight: 300;
+      max-width: 535px;
+      margin-right: auto;
+      margin-left: auto;
+      color: #fff;
+      margin-bottom: 30px;
+    }
+  }
+  nav {
+    margin: 0 auto;
+  }
+}
+.page__navitem {
+  display: inline-block;
+  color: #000000;
+  background-color: transparent;
+  font-size: 1em;
+  font-weight: 500;
+  padding: 0 12px;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  min-width: 100px;
+  text-align: center;
+  height: 36px;
+  line-height: 34px;
+}
+.page__navitem > a {
+  color: #040f4a;
+}
+
+.header__page .header__hamburger button span > svg {
+  width: 48px;
+  height: 48px;
+  padding: 8px;
+  color: #040f4a;
+  border-radius: 50%;
+  border: 1px solid #babfc4;
+  font-weight: 100;
+}
+
 @media screen and (max-width: 1199px) {
   .features {
     &__slide {
@@ -873,6 +985,7 @@ img.avatar {
       transform: translateY(-100%);
       transition: all 0.4s ease-out 0.1s;
     }
+
     &:not(.navbar--simple) {
       & > .navbar__item:not(.navbar__item--active) a {
         color: rgba(4, 15, 74, 0.6);
@@ -905,6 +1018,15 @@ img.avatar {
     .social-media {
       margin: 0 auto 30px;
     }
+  }
+
+  .page__navitem {
+    line-height: 78px;
+ 
+  }
+
+  .page__navitem > a {
+    color: rgba(4, 15, 74, 0.6);
   }
 }
 @media screen and (max-width: 767px) {
