--- a/src/assets/scss/dashboard/wallet.module.scss
+++ b/src/assets/scss/dashboard/wallet.module.scss
@@ -52,6 +52,11 @@
   }
 }
 
+.little-label {
+  font-size: 12px;
+  margin-top: 0.25rem;
+}
+
 .items-credit {
   display: flex;
   flex-direction: row;
