--- a/src/pages/dashboard/wallet/style.module.scss
+++ b/src/pages/dashboard/wallet/style.module.scss
@@ -185,3 +185,34 @@
     border-color: #111bff;
   }
 }
+.otp-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  direction: ltr;
+  width: 200px;
+
+  .otp-input {
+    direction: ltr !important;
+    text-align: center !important;
+    display: block;
+    width: calc(100% / 6.5) !important;
+    height: 48px;
+    line-height: 48px;
+    margin: 0;
+    padding: 0.375rem 0.75rem;
+    font-size: 0.875em;
+    font-weight: bold;
+    color: #03041b;
+    box-shadow: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    appearance: none;
+    border-radius: 10px;
+    border: 1px solid rgba(3, 4, 27, 0.1);
+    transition:
+      border-color 0.15s ease-in-out,
+      box-shadow 0.15s ease-in-out;
+  }
+}
+
