--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -239,18 +239,25 @@
   &__avatar {
     justify-content: center;
     margin-left: 30px;
-    img {
+    span {
       width: 68px;
       height: 68px;
       padding: 0;
       border: none;
       border-radius: 50%;
+      font-weight: bold;
+      font-size: 1.4rem;
+      background-color: rgba(17, 27, 255, 0.1);
+      color: #335ffc;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
   &__edit {
     h6 {
-      font-size: 1em;
-      font-weight: 700;
+      font-size: 1em !important;
+      font-weight: 700 !important;
     }
     a {
       padding: 9px 18px;
@@ -267,6 +274,19 @@
     }
     svg {
       margin-left: 5px;
+    }
+  }
+  &__level {
+    img {
+      width: 25px;
+    }
+    span {
+      margin-left: 10px;
+      color: rgba(3, 4, 27, 0.6);
+    }
+    a {
+      font-weight: 500;
+      font-size: 1rem;
     }
   }
 }
