--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -290,6 +290,61 @@
     }
   }
 }
+.sub-link {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #111bff;
+  padding: 0;
+}
+
+.table-responsive {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+.data-table {
+  border-collapse: collapse;
+  font-weight: 100;
+  text-rendering: optimizeLegibility;
+  width: 100%;
+  border-color: rgba(3, 4, 27, 0.1);
+  caption-side: bottom;
+  thead,
+  tbody,
+  tfoot,
+  tr,
+  td,
+  th {
+    border-color: inherit;
+    border-style: solid;
+    border-width: 0;
+  }
+  th,
+  td {
+    padding: 12px;
+  }
+  thead th {
+    font-size: 0.75em;
+    font-weight: 500;
+    color: rgba(3, 4, 27, 0.4);
+    white-space: nowrap;
+  }
+  tbody td {
+    font-size: 0.875em;
+    font-weight: 500;
+    color: #03041b;
+    border-bottom: 1px solid rgba(3, 4, 27, 0.05);
+  }
+  .sub-link {
+    font-size: 1em;
+  }
+}
+.text-50 {
+  color: rgba(3, 4, 27, 0.5) !important;
+  padding-right: 5px;
+}
 
 @media screen and (max-width: 978px) {
   .main-wrapper {
