--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -206,6 +206,200 @@
   border: none;
 }
 
+.user-summary {
+  background-image: url(/src/assets/img/coins/bitcoin-batch.png) !important;
+  background-repeat: no-repeat !important;
+  background-size: 235px 183px !important;
+  background-position: 40px -14px !important;
+  &__body {
+    padding: 40px !important;
+  }
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    margin-top: -24px;
+  }
+  li {
+    min-height: 75px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 24px;
+    &:not(:last-child, .user-summary__avatar) {
+      margin-left: 65px;
+    }
+    h6 {
+      margin-bottom: 20px;
+      font-size: 0.875em;
+      font-weight: 500;
+      line-height: 18px;
+    }
+  }
+  &__avatar {
+    justify-content: center;
+    margin-left: 30px;
+    span {
+      width: 68px;
+      height: 68px;
+      padding: 0;
+      border: none;
+      border-radius: 50%;
+      font-weight: bold;
+      font-size: 1.4rem;
+      background-color: rgba(17, 27, 255, 0.1);
+      color: #335ffc;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  &__edit {
+    h6 {
+      font-size: 1em !important;
+      font-weight: 700 !important;
+    }
+    a {
+      padding: 9px 18px;
+      background-color: transparent;
+      border: 1px solid rgba(3, 4, 27, 0.1);
+      border-radius: 10px;
+      color: rgba(3, 4, 27, 0.4);
+      font-size: 0.875rem;
+    }
+  }
+  &__last-seen {
+    & > div {
+      color: rgba(3, 4, 27, 0.6);
+    }
+    svg {
+      margin-left: 5px;
+    }
+  }
+  &__level {
+    img {
+      width: 25px;
+    }
+    span {
+      margin-left: 10px;
+      color: rgba(3, 4, 27, 0.6);
+    }
+    a {
+      font-weight: 500;
+      font-size: 1rem;
+    }
+  }
+}
+.sub-link {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #111bff;
+  padding: 0;
+}
+
+.table-responsive {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+.data-table {
+  border-collapse: collapse;
+  font-weight: 100;
+  text-rendering: optimizeLegibility;
+  width: 100%;
+  border-color: rgba(3, 4, 27, 0.1);
+  caption-side: bottom;
+  thead,
+  tbody,
+  tfoot,
+  tr,
+  td,
+  th {
+    border-color: inherit;
+    border-style: solid;
+    border-width: 0;
+  }
+  th,
+  td {
+    padding: 12px;
+  }
+  thead th {
+    font-size: 0.75em;
+    font-weight: 500;
+    color: rgba(3, 4, 27, 0.4);
+    white-space: nowrap;
+  }
+  tbody td {
+    font-size: 0.875em;
+    font-weight: 500;
+    color: #03041b;
+    border-bottom: 1px solid rgba(3, 4, 27, 0.05);
+  }
+  .sub-link {
+    font-size: 1em;
+  }
+}
+.text-50 {
+  color: rgba(3, 4, 27, 0.5) !important;
+  padding-right: 5px;
+}
+
+.easy-text {
+  font-size: 15px;
+  line-height: 26px;
+}
+
+.easy-box {
+  position: relative;
+  background-color: #fff;
+  background-clip: border-box;
+  border-radius: 10px;
+  text-align: center;
+  padding: 1.5rem 10px;
+  text-decoration: none;
+  display: block;
+  color: #3e4b5b;
+  box-shadow: 0 2px 4px rgba(126, 142, 177, 0.12);
+  transition: all 0.25s ease;
+  &:hover {
+    transform: translateY(-5px) scale(1.02);
+    box-shadow: 0 5px 12px rgba(126, 142, 177, 0.2);
+  }
+}
+.trading {
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  padding: 2px 4px;
+  border-radius: 4px;
+  line-height: 1.2;
+  font-size: 0.63rem;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 10px;
+  span {
+    display: inline-block;
+    vertical-align: middle;
+  }
+  i {
+    margin-left: 2px;
+    vertical-align: middle;
+    font-size: 14px;
+  }
+}
+.trading-up {
+  color: #fff;
+  background-color: #24b314;
+}
+
+@media screen and (max-width: 978px) {
+  .main-wrapper {
+    margin-right: 0 !important;
+  }
+}
+
 @media screen and (max-width: 991px) {
   .wrapper {
     .main-wrapper {
@@ -254,12 +448,6 @@
       flex-wrap: nowrap;
     }
   }
-}
-
-@media screen and (max-width:978px) {
-  .main-wrapper {
-    margin-right: 0!important;
-  } 
 }
 
 @media screen and (max-width: 767px) {
