--- a/src/assets/scss/dashboard/exchange.module.scss
+++ b/src/assets/scss/dashboard/exchange.module.scss
@@ -128,3 +128,13 @@
     padding-right: 20px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .currency-controls {
+    flex-wrap: wrap;
+    justify-content: center;
+    &__group {
+      flex: 0 0 100%;
+    }
+  }
+}
