--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -367,6 +367,14 @@
     transform: translateY(-5px) scale(1.02);
     box-shadow: 0 5px 12px rgba(126, 142, 177, 0.2);
   }
+  &__value {
+    font-size: 1rem;
+    transition: all 0.25s ease;
+    font-weight: 500;
+    line-height: 1.2;
+    display: inline-block;
+    vertical-align: middle;
+  }
 }
 .trading {
   position: absolute;
@@ -392,6 +400,23 @@
 .trading-up {
   color: #fff;
   background-color: #24b314;
+}
+
+.table-striped {
+  tbody > tr td {
+    border-bottom-width: 0;
+  }
+  tbody > tr:nth-of-type(odd) > * {
+    background-color: #f8f8f8;
+    color: #03041b;
+    --bs-table-accent-bg: unset;
+  }
+}
+
+@media screen and (max-width: 1399px) {
+  .data-table tbody td {
+    min-width: 140px;
+  }
 }
 
 @media screen and (max-width: 978px) {
@@ -448,6 +473,13 @@
       flex-wrap: nowrap;
     }
   }
+
+  .user-summary {
+    background-image: none !important;
+  }
+  .data-table tbody td {
+    min-width: 140px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -494,6 +526,24 @@
     &__hamburger-btn {
       & + & {
         display: block;
+      }
+    }
+  }
+
+  .user-summary {
+    li {
+      flex: 0 0 50%;
+      padding: 0 25px;
+
+      &:not(:last-child, .user-summary__avatar) {
+        margin-left: 0;
+      }
+    }
+    &__avatar {
+      flex: 0 0 100% !important;
+      margin-left: 0;
+      span {
+        margin: auto;
       }
     }
   }
