--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -347,7 +347,7 @@
 }
 
 .easy-text {
-  font-size: 15px;
+  font-size: 13px;
   line-height: 26px;
 }
 
@@ -363,6 +363,7 @@
   color: #3e4b5b;
   box-shadow: 0 2px 4px rgba(126, 142, 177, 0.12);
   transition: all 0.25s ease;
+  margin-bottom: 1rem;
   &:hover {
     transform: translateY(-5px) scale(1.02);
     box-shadow: 0 5px 12px rgba(126, 142, 177, 0.2);
@@ -546,5 +547,12 @@
         margin: auto;
       }
     }
+  }
+}
+@media screen and (max-width: 575px) {
+  .user-summary li {
+    flex: 0 0 100%;
+    padding: 0;
+    text-align: center;
   }
 }
