--- a/src/assets/scss/components/Input/accountNumber.module.scss
+++ b/src/assets/scss/components/Input/accountNumber.module.scss
@@ -26,9 +26,10 @@
     transition: all ease 200ms;
   }
   img {
-    width: 20px;
+    width: 25px;
     height: auto;
     opacity: 0.7;
     top: 10px;
+    border-radius: 50%;
   }
 }
