--- a/src/assets/scss/components/Input/ibanNumber.module.scss
+++ b/src/assets/scss/components/Input/ibanNumber.module.scss
@@ -39,9 +39,10 @@
     transition: all ease 200ms;
   }
   img {
-    width: 20px !important;
+    width: 25px !important;
     height: auto;
     opacity: 0.7;
     top: 10px;
+    border-radius: 50%;
   }
 }
