--- a/src/components/WithdrawOTP/otp.module.scss
+++ b/src/components/WithdrawOTP/otp.module.scss
@@ -4,38 +4,57 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  background-color: #f1f1f1;
   border-radius: 10px;
-  padding: 30px 20px;
   margin-bottom: 20px;
-  .input-container {
+  .otp-header{
+    margin-left: auto;
+  }
+  .otp-content {
+    padding: 30px 20px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    direction: ltr;
-    width: 80%;
-    margin-top: 20px;
-    .otp-input {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+    .otp-title {
+      margin-left: auto;
+      .otp-title-text {
+        color: #03041b66;
+        font-size: 14px;
+        span {
+          text-align: center;
+          direction: rtl;
+        }
+      }
+    }
+    .input-container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       direction: ltr;
-      text-align: center !important;
-      display: block;
-      width: calc(80% / 8) !important;
-      height: 48px;
-      line-height: 48px;
-      margin: 0;
-      padding: 0.375rem 0.75rem;
-      font-size: 0.875em;
-      font-weight: bold;
-      color: #03041b;
-      box-shadow: none;
-      background-color: #fff;
-      background-clip: padding-box;
-      appearance: none;
-      border-radius: 10px;
-      border: 1px solid rgba(3, 4, 27, 0.1);
-      transition:
-        border-color 0.15s ease-in-out,
-        box-shadow 0.15s ease-in-out;
+      width: 80%;
+      margin-top: 20px;
+      .otp-input {
+        direction: ltr;
+        text-align: center !important;
+        display: block;
+        width: calc(80% / 6) !important;
+        height: 48px;
+        line-height: 48px;
+        margin: 0;
+        padding: 0.375rem 0.75rem;
+        font-size: 0.875em;
+        font-weight: bold;
+        color: #03041b;
+        box-shadow: none;
+        background-color: #fff;
+        background-clip: padding-box;
+        appearance: none;
+        border-radius: 10px;
+        border: 1px solid rgba(3, 4, 27, 0.1);
+        transition:
+          border-color 0.15s ease-in-out,
+          box-shadow 0.15s ease-in-out;
+      }
     }
   }
 }
