fix bugs in IBAN

--- a/src/assets/scss/components/Input/copyInput.module.scss
+++ b/src/assets/scss/components/Input/copyInput.module.scss
@@ -11,6 +11,7 @@
     border-radius: 10px;
     transition: all 150ms ease-in-out;
     width: 100%;
+    direction: ltr;
     &__icon {
       margin-left: 10px;
       margin-right: 10px;
