--- a/src/assets/scss/auth/auth.module.scss
+++ b/src/assets/scss/auth/auth.module.scss
@@ -41,12 +41,12 @@
     border: none;
     width: 100%;
     max-width: 517px;
-    min-height: 670px;
+    min-height: 536px;
     margin: 0 auto;
-    box-shadow: 0 4px 34px rgba(0, 0, 0, 0.04);
+    box-shadow: 0 4px 34px #0000000a;
   }
   .card-body {
-    padding: 25px 100px;
+    padding: 40px 50px;
   }
 }
 
