--- a/src/assets/scss/landing/home.module.scss
+++ b/src/assets/scss/landing/home.module.scss
@@ -141,104 +141,106 @@
 }
 
 .img_bottom_right .i_b_r_img {
-  background-image: url(/src/assets/img/header/china-currency.png);
+  background-image: url(/src/assets/img/header/token-usdt.png);
   width: 209px;
   height: 203px;
   background-repeat: no-repeat;
-  -webkit-animation: changeimg1 20s infinite ease-in-out;
-  -moz-animation: changeimg1 20s infinite ease-in-out;
-  animation: changeimg1 20s infinite ease-in-out;
+  // -webkit-animation: changeimg1 20s infinite ease-in-out;
+  // -moz-animation: changeimg1 20s infinite ease-in-out;
+  // animation: changeimg1 20s infinite ease-in-out;
 }
-@keyframes changeimg1 {
-  0%,
-  15% {
-    background-image: url(/src/assets/img/header/china-currency.png);
-  }
-  30% {
-    background-image: url(/src/assets/img/header/eu-currency.png);
-  }
-  50% {
-    background-image: url(/src/assets/img/header/tmn-currency.png);
-  }
-  70% {
-    background-image: url(/src/assets/img/header/turkey-currency.png);
-  }
-  100% {
-    background-image: url(/src/assets/img/header/uk-currency.png);
-  }
-}
+// @keyframes changeimg1 {
+//   0%,
+//   15% {
+//     background-image: url(/src/assets/img/header/china-currency.png);
+//   }
+//   30% {
+//     background-image: url(/src/assets/img/header/eu-currency.png);
+//   }
+//   50% {
+//     background-image: url(/src/assets/img/header/tmn-currency.png);
+//   }
+//   70% {
+//     background-image: url(/src/assets/img/header/turkey-currency.png);
+//   }
+//   100% {
+//     background-image: url(/src/assets/img/header/uk-currency.png);
+//   }
+// }
 
 .img_top_right .i_t_r_img {
-  background-image: url(/src/assets/img/header/token-cardano.png);
+  background-image: url(/src/assets/img/header/turkey-currency.png);
   width: 111px;
   height: 104px;
   background-repeat: no-repeat;
-  animation: changeimg2 40s infinite;
-  animation-timing-function: ease-in-out;
+  background-size: contain;
+  // animation: changeimg2 40s infinite;
+  // animation-timing-function: ease-in-out;
 }
-@keyframes changeimg2 {
-  0%,
-  15% {
-    background-image: url(/src/assets/img/header/token-cardano.png);
-  }
-  35% {
-    background-image: url(/src/assets/img/header/token-litecoin.png);
-  }
-  55% {
-    background-image: url(/src/assets/img/header/token-usdt.png);
-  }
-  75% {
-    background-image: url(/src/assets/img/header/token-xrp.png);
-  }
-}
+// @keyframes changeimg2 {
+//   0%,
+//   15% {
+//     background-image: url(/src/assets/img/header/token-cardano.png);
+//   }
+//   35% {
+//     background-image: url(/src/assets/img/header/token-litecoin.png);
+//   }
+//   55% {
+//     background-image: url(/src/assets/img/header/token-usdt.png);
+//   }
+//   75% {
+//     background-image: url(/src/assets/img/header/token-xrp.png);
+//   }
+// }
 
 .img_top_left .i_t_l_img {
   background-image: url(/src/assets/img/header/btc-coin.png);
   width: 216px;
   height: 210px;
   background-repeat: no-repeat;
-  animation: changeimg3 60s infinite;
-  animation-timing-function: ease-in-out;
+  // animation: changeimg3 60s infinite;
+  // animation-timing-function: ease-in-out;
 }
-@keyframes changeimg3 {
-  0%,
-  15% {
-    background-image: url(/src/assets/img/header/btc-coin.png);
-  }
-  32% {
-    background-image: url(/src/assets/img/header/coin-solana.png);
-  }
-  52% {
-    background-image: url(/src/assets/img/header/coin-tron.png);
-  }
-  72% {
-    background-image: url(/src/assets/img/header/eth-coin.png);
-  }
-}
+// @keyframes changeimg3 {
+//   0%,
+//   15% {
+//     background-image: url(/src/assets/img/header/btc-coin.png);
+//   }
+//   32% {
+//     background-image: url(/src/assets/img/header/coin-solana.png);
+//   }
+//   52% {
+//     background-image: url(/src/assets/img/header/coin-tron.png);
+//   }
+//   72% {
+//     background-image: url(/src/assets/img/header/eth-coin.png);
+//   }
+// }
 
 .img_bottom_left .i_b_l_img {
-  background-image: url(/src/assets/img/header/doge-mim.png);
+  background-image: url(/src/assets/img/header/eth-coin.png);
   width: 129px;
   height: 126px;
   background-repeat: no-repeat;
-  animation: changeimg4 80s infinite;
-  animation-timing-function: ease-in-out;
+  background-size: contain;
+  // animation: changeimg4 80s infinite;
+  // animation-timing-function: ease-in-out;
 }
-@keyframes changeimg4 {
-  0%,
-  15% {
-    background-image: url(/src/assets/img/header/doge-mim.png);
-  }
-  36% {
-    background-image: url(/src/assets/img/header/polygan-mim.png);
-  }
-  56% {
-    background-image: url(/src/assets/img/header/shiba-mim.png);
-  }
-  76% {
-    background-image: url(/src/assets/img/header/ton-mim.png);
-  }
-}
+// @keyframes changeimg4 {
+//   0%,
+//   15% {
+//     background-image: url(/src/assets/img/header/doge-mim.png);
+//   }
+//   36% {
+//     background-image: url(/src/assets/img/header/polygan-mim.png);
+//   }
+//   56% {
+//     background-image: url(/src/assets/img/header/shiba-mim.png);
+//   }
+//   76% {
+//     background-image: url(/src/assets/img/header/ton-mim.png);
+//   }
+// }
 
 @media only screen and (min-width: 945px) and (max-width: 1100px) {
   .img_top_right {
