--- a/src/assets/scss/landing/coins.module.scss
+++ b/src/assets/scss/landing/coins.module.scss
@@ -48,3 +48,15 @@
     }
   }
 }
+
+@media screen and (max-width: 991px) {
+  .title {
+    margin: 0 0 20px;
+    flex: 0 0 100%;
+    font-size: 2rem;
+  }
+  .modern-search {
+    max-width: unset;
+    width: 100%;
+  }
+}
