--- a/src/components/PasswordInput/style.sass
+++ b/src/components/PasswordInput/style.sass
@@ -22,9 +22,18 @@
       color: #f5222d
 
 .ant-list .ant-list-item
-  padding: 5px 0
+  padding: 1px 0
 :where(.css-dev-only-do-not-override-1vr7spz).ant-list .ant-list-item .ant-list-item-meta .ant-list-item-meta-avatar
-    margin-inline-end: 5px
+  margin-inline-end: 8px
 
-
-
+:where(.css-dev-only-do-not-override-17sses9).ant-list
+  box-sizing: border-box
+  margin: 0
+  padding: 0
+  color: rgba(0, 0, 0, 0.88)
+  font-size: 14px
+  line-height: 1.5714285714285714
+  list-style: none
+  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji'
+  position: relative
+  margin-bottom: 20px
