--- a/src/assets/scss/_custome.scss
+++ b/src/assets/scss/_custome.scss
@@ -433,9 +433,10 @@ html {
 }
 
 a {
-  color: #335ffc;
+  color: #2d59e8;
   text-decoration: none;
 }
+
 span.icon {
   display: inline-block;
   vertical-align: middle;
