--- a/src/assets/scss/auth/auth.module.scss
+++ b/src/assets/scss/auth/auth.module.scss
@@ -147,7 +147,28 @@
       box-shadow 0.15s ease-in-out;
   }
 }
-
+.custom-header {
+  position: relative;
+  padding-top: 20px;
+  margin-bottom: 50px;
+  background-repeat: no-repeat;
+  background-size:
+    209px 203px,
+    216px 210px,
+    129px 126px,
+    111px 107px,
+    1173px 520px,
+    100% 862px;
+  background-position:
+    calc(100% - 100px) 525px,
+    50px 326px,
+    293.5px 527px,
+    calc(100% - 203px) 317px,
+    0 263px,
+    0 0;
+  border-bottom: 1px solid #cccccc6b;
+  padding-bottom: 20px;
+}
 @media screen and (max-width: 767px) {
   .header {
     flex-wrap: wrap;
