--- a/src/assets/scss/landing/about-us.module.scss
+++ b/src/assets/scss/landing/about-us.module.scss
@@ -27,6 +27,7 @@
     color: #040f4a;
     margin: 0;
     line-height: 1.8;
+    text-align: center;
   }
 }
 
@@ -76,8 +77,8 @@
       padding: 40px;
     }
   }
-  .counter-list{
+  .counter-list {
     margin-top: 80px;
     margin-bottom: 0;
-}
+  }
 }
