fix style of landing

--- a/src/assets/scss/_custome.scss
+++ b/src/assets/scss/_custome.scss
@@ -564,3 +564,6 @@ ul {
   font-family: Arial, Helvetica, sans-serif !important;
   direction: ltr !important;
 }
+.ltr-tag {
+  direction: ltr !important;
+}
