--- a/src/assets/scss/auth/auth.module.scss
+++ b/src/assets/scss/auth/auth.module.scss
@@ -149,7 +149,7 @@
 }
 .custom-header {
   position: relative;
-  padding-top: 20px;
+  padding: 40px 0;
   margin-bottom: 50px;
   background-repeat: no-repeat;
   background-size:
@@ -167,7 +167,6 @@
     0 263px,
     0 0;
   border-bottom: 1px solid #cccccc6b;
-  padding-bottom: 20px;
 }
 @media screen and (max-width: 767px) {
   .header {
