--- a/src/components/SelectCountry/style.sass
+++ b/src/components/SelectCountry/style.sass
@@ -7,8 +7,13 @@
 .flag-container
     display: flex
     flex-direction: row
-    justify-content: space-around
+    justify-content: space-between
+    align-items: center
     font-family: var(--bs-font-iranyekaneFa)
+    &>img
+        border-radius: 3px
+        max-width: 25px
+        max-height: 30px
     &>span
         direction: ltr
         font-size: 13px
