--- a/src/assets/scss/dashboard/exchange.module.scss
+++ b/src/assets/scss/dashboard/exchange.module.scss
@@ -214,6 +214,7 @@
     margin-top: 25px;
     width: 66px;
     padding-right: 20px;
+    margin-bottom: 3rem;
   }
 }
 
@@ -314,6 +315,11 @@
     justify-content: center;
     &__group {
       flex: 0 0 100%;
+    }
+  }
+  .divider {
+    span {
+      margin-bottom: 0;
     }
   }
 }
