fix bugs in ticket

--- a/src/assets/scss/dashboard/ticket.module.scss
+++ b/src/assets/scss/dashboard/ticket.module.scss
@@ -9,14 +9,17 @@
     border: 1px solid #e1e7ec;
     border-radius: 7px;
     background-color: #fff;
+    &.answer {
+      background: #2d59e833;
+    }
   }
   &__header {
     display: table;
     width: 100%;
     margin-bottom: 0.5rem;
   }
-  &__text{
-    margin-bottom: 12px
+  &__text {
+    margin-bottom: 12px;
   }
 }
 
@@ -42,4 +45,9 @@
   align-items: center;
   justify-content: center;
   margin-left: 8px;
+  img {
+    opacity: 0.8;
+    width: 80%;
+    object-fit: cover;
+  }
 }
