--- a/src/assets/scss/components/Input/dropdown.module.scss
+++ b/src/assets/scss/components/Input/dropdown.module.scss
@@ -16,7 +16,6 @@
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
-
     padding: 0 12px;
     height: 48px;
     line-height: 48px;
@@ -34,6 +33,9 @@
       background-color 0.15s ease-in-out,
       border-color 0.15s ease-in-out,
       box-shadow 0.15s ease-in-out;
+    &.disabled {
+      background-image: none;
+    }
     &:after {
       content: none;
     }
@@ -66,20 +68,20 @@
     font-size: 0.75rem;
     text-align: right;
     &:not(.inner) {
-      box-shadow: 0px 11px 21px rgba(0, 0, 0, 0.06);
-      border: 1px solid rgba(3, 4, 27, 0.1);
+      box-shadow: 0px 11px 21px rgba(0, 0, 0, 0.06) !important;
+      border: 1px solid rgba(3, 4, 27, 0.1) !important;
       padding-top: 0;
       &.show {
         top: -1px !important;
-        border-top-right-radius: 0;
-        border-top-left-radius: 0;
-        border-top-color: rgba(3, 4, 27, 0.03);
+        border-top-right-radius: 0 !important;
+        border-top-left-radius: 0 !important;
+        border-top-color: rgba(3, 4, 27, 0.03) !important;
       }
     }
     &.inner {
       position: static;
       float: none;
-      border: 0;
+      border: 0 !important;
       padding: 0;
       margin: 0;
       border-radius: 0;
