--- a/src/assets/scss/_custome.scss
+++ b/src/assets/scss/_custome.scss
@@ -517,6 +517,18 @@ ul {
   }
 }
 
+.form-check-input {
+  background-size: 20px;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: 1px solid rgba(3, 4, 27, 0.2);
+  &:checked[type="radio"] {
+    background-color: transparent;
+    border-color: #111bff;
+    background-image: url("/src/assets/img/icons/dot.svg");
+  }
+}
+
 .breadcrumb {
   .breadcrumb-item {
     font-size: 1rem;
