update coins section (#289)

--- a/src/assets/scss/landing/home.module.scss
+++ b/src/assets/scss/landing/home.module.scss
@@ -413,6 +413,10 @@ img.avatar {
 
   &__tabs {
     margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    flex-direction: row;
   }
   .tab-content {
     .active {
