--- a/src/assets/scss/components/CoinRecord/style.module.scss
+++ b/src/assets/scss/components/CoinRecord/style.module.scss
@@ -12,7 +12,7 @@
   .coin-name {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: right;
     font-size: 0.87rem;
     & > div {
       display: flex;
