--- a/src/assets/scss/components/CoinRecord/style.module.scss
+++ b/src/assets/scss/components/CoinRecord/style.module.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: flex-start;
   .coin-logo {
-    margin-left: 16px;
+    margin-left: 8px;
     img {
       width: 34px;
       border-radius: 50%;
@@ -12,9 +12,14 @@
   .coin-name {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: right;
     font-size: 0.87rem;
-    .origin-name {
+    & > div {
+      display: flex;
+      flex-direction: row;
+    }
+    .persian-name {
+      text-transform: uppercase;
       font-weight: bold;
     }
     .nick-name {
