--- a/src/assets/scss/landing/home.module.scss
+++ b/src/assets/scss/landing/home.module.scss
@@ -268,13 +268,13 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  align-items: start !important;
+  align-items: center !important;
   justify-content: center;
   padding: 0;
   &:not(.navbar--simple).expanded {
     transform: translateY(0);
   }
- 
+
   & .header__auth {
     display: none;
     margin-bottom: 32px;
@@ -294,7 +294,7 @@
       height: 36px;
       line-height: 34px;
     }
- 
+
     &:not(.active) > a {
       color: rgba(255, 255, 255, 0.6);
     }
@@ -421,7 +421,7 @@ img.avatar {
     margin-bottom: 40px;
     display: flex;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
     flex-direction: row;
   }
   .tab-content {
@@ -1028,7 +1028,6 @@ img.avatar {
   }
 
   .navbar {
-  
     &:not(.navbar--simple) {
       position: fixed;
       top: 0;
@@ -1050,8 +1049,6 @@ img.avatar {
       & > .navbar__item + .navbar__item {
         margin-top: 12px;
       }
-      
-    
     }
 
     &__close,
@@ -1158,21 +1155,21 @@ img.avatar {
       -240px 155px,
       50% 100%;
   }
-
 }
 @media screen and (max-width: 992px) {
- .footer .footer-bottom{justify-content: center;}
-.footer-copyright {
-  order:2;
-  text-align: center;
-  justify-content: center;
- }
- 
- .social-media {
+  .footer .footer-bottom {
+    justify-content: center;
+  }
+  .footer-copyright {
+    order: 2;
     text-align: center;
-   order:1;
-   
- }
+    justify-content: center;
+  }
+
+  .social-media {
+    text-align: center;
+    order: 1;
+  }
 }
 @media screen and (max-width: 992px) {
   .footer .footer-bottom {
