update some bugs in profile

--- a/src/assets/scss/dashboard/profile.module.scss
+++ b/src/assets/scss/dashboard/profile.module.scss
@@ -329,3 +329,13 @@
     }
   }
 }
+
+@media screen and (max-width: 575px) {
+  .accounts-field {
+    flex-direction: column;
+    & > label {
+      line-height: 20px;
+      flex: 0 0 40px;
+    }
+  }
+}
