--- a/src/assets/scss/landing/contactUs.module.scss
+++ b/src/assets/scss/landing/contactUs.module.scss
@@ -33,9 +33,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: -24px -12px 0;
-  margin-bottom: 150px;
-  margin-top: 226px;
+  margin: 120px -12px;
   & > li {
     padding: 0 12px;
     margin-top: 24px;
