--- a/src/assets/scss/components/Input/otpContainer.module.scss
+++ b/src/assets/scss/components/Input/otpContainer.module.scss
@@ -37,7 +37,7 @@
       justify-content: space-between;
       direction: ltr;
       width: 80%;
-      margin-top: 20px;
+      margin: 20px auto 0;
       .otp-input {
         direction: ltr;
         text-align: center !important;
