--- a/src/assets/scss/dashboard/exchange.module.scss
+++ b/src/assets/scss/dashboard/exchange.module.scss
@@ -317,7 +317,10 @@
     }
   }
 }
-
+.tooltip {
+  font-family: inherit;
+  font-size: 12px;
+}
 @media screen and (max-width: 767px) {
   .currency-controls {
     flex-wrap: wrap;
