--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -608,49 +608,8 @@ div.user-tier-card {
 
 @media screen and (max-width: 767px) {
   .header {
-    &__navbar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      min-width: 300px;
-      max-width: 300px;
-      flex-wrap: wrap;
-      background-color: #fff;
-      height: 100%;
-      z-index: 999;
-      display: block;
-      padding: 20px;
-      transform: translateX(-100%);
-      transition: all 0.4s ease-out 0.1s;
-      box-shadow: 10px 4px 64px rgba(0, 0, 0, 0.03);
-      li:not(:last-child, .dashboard-header__navbar__close) {
-        border-left: none;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-        margin: 0 0 5px 0;
-        padding: 0 0 5px 0;
-      }
-      &__close {
-        display: block;
-        margin-bottom: 32px;
-        button {
-          border: none;
-          padding: 0;
-          background-color: transparent;
-          outline: none;
-          width: 12px;
-          height: 12px;
-          line-height: 12px;
-          float: left;
-        }
-      }
-      &.expanded {
-        transform: translateX(0);
-      }
-    }
-    &__hamburger-btn {
-      & + & {
-        display: block;
-      }
+    .hide-in-mobile {
+      display: none;
     }
   }
 
@@ -673,6 +632,11 @@ div.user-tier-card {
   }
 }
 @media screen and (max-width: 575px) {
+  .header {
+    a {
+      font-size: 0.7rem !important;
+    }
+  }
   .user-summary li {
     flex: 0 0 100%;
     padding: 0;
