--- a/src/assets/scss/_custome.scss
+++ b/src/assets/scss/_custome.scss
@@ -588,6 +588,11 @@ ul {
   margin: 0 5px !important;
 }
 
+.tooltip {
+  font-family: IRANYekanFa;
+  font-size: 12.5px;
+}
+
 @media screen and (max-width: 575px) {
   .btn {
     --bs-btn-font-size: 0.8rem;
