Modifying some texts & styles

--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -411,9 +411,9 @@
     box-shadow: 0 5px 12px rgba(126, 142, 177, 0.2);
   }
   &__value {
-    font-size: 1rem;
-    transition: all 0.25s ease;
-    font-weight: 500;
+    font-size: 0.885rem;
+    transition: all .25s ease;
+    font-weight: 400;
     line-height: 1.2;
     display: inline-block;
     vertical-align: middle;
