--- a/src/assets/scss/dashboard/ticket.module.scss
+++ b/src/assets/scss/dashboard/ticket.module.scss
@@ -22,7 +22,9 @@
     margin-bottom: 12px;
   }
 }
-
+.support-btn {
+  display: inline-grid;
+}
 .comment-meta {
   color: #9da9b9;
   font-size: 13px;
