--- a/src/pages/dashboard/setting/styles.module.scss
+++ b/src/pages/dashboard/setting/styles.module.scss
@@ -79,8 +79,9 @@
 
 .change-password-form {
   h5 {
-    font-size: 0.9rem;
+    font-size: .875rem;
     padding-top: 10px;
+    font-weight: 400;
   }
 }
 .password-container {
@@ -142,13 +143,33 @@
   border: 1px solid #eee;
   width: 100%;
   height: 50px;
-  justify-content: center;
   cursor: pointer;
-  transition: ease all 400ms;
+  transition: ease all .4s;
+  font-size: 0.875em;
+  text-align: right;
+  margin-bottom: 5px;
+  justify-content: center;
+  font-weight: 400;
   &:hover {
     background-color: #eee;
   }
   span {
     margin-right: 5px;
   }
+}
+.text-50 {
+  color: rgba(3, 4, 27, .5) !important;
+  font-size: .875em;
+}
+.float-input {
+  font-size: 0.775em;
+}
+.float-input .ant-input-affix-wrapper.ant-input-affix-wrapper-lg {
+  padding: 8px 8px !important;
+}
+.verfy-method-text {
+  font-size: .875rem;
+  padding-top: 10px;
+  font-weight: 400;
+  line-height: 25px;
 }
