--- a/src/assets/scss/_custome.scss
+++ b/src/assets/scss/_custome.scss
@@ -620,7 +620,13 @@ ul {
   font-weight: 400;
   line-height: 25px;
 }
-
+.table-borderless>:not(caption)>*>* {
+  border-bottom-width: 0;
+  font-size: .775em;
+  vertical-align: middle;
+  padding: 4px !important;
+  font-weight: 400;
+}
 @media screen and (max-width: 575px) {
   .btn {
     --bs-btn-font-size: 0.8rem;
