fix titles and 404 page

--- a/src/assets/scss/landing/home.module.scss
+++ b/src/assets/scss/landing/home.module.scss
@@ -1003,6 +1003,10 @@ img.avatar {
   }
 }
 
+.not-found{
+  background: #050625;
+}
+
 @media screen and (max-width: 1199px) {
   .features {
     &__slide {
