update input phone

--- a/src/components/PhoneInput/style.scss
+++ b/src/components/PhoneInput/style.scss
@@ -14,12 +14,13 @@
         padding: 10px 10px;
         border-top-left-radius: 8px;
         border-bottom-left-radius: 8px;
+        border-right:none
       }
      
     }
     input{
       padding: 10px 10px;
-      min-width: 83%;
+      min-width: 78%;
       min-height: 42px;
       border-top-right-radius: 8px;
       border-bottom-right-radius: 8px;
