--- a/src/components/PhoneInput/style.scss
+++ b/src/components/PhoneInput/style.scss
@@ -18,6 +18,8 @@
       }
      
     }
+    .react-international-phone-input-container .react-international-phone-country-selector-button { border-right-color: transparent;}
+    .react-international-phone-dial-code-preview{ margin-left: -6px;}
     input{
       padding: 10px 10px;
       min-width: 78%;
